# uni-admit-ai

./: .gitignore  PROMPT.md  README.md  pyproject.toml  requirements.txt  skills-lock.json  streamlit_app.py
.agents/skills/developing-with-streamlit/templates/: .gitattributes
.agents/skills/developing-with-streamlit/templates/apps/dashboard-metrics-snowflake/.streamlit/: secrets.toml.example
.agents/skills/developing-with-streamlit/templates/themes/: .gitignore
.claude/skills/: dataverse-python-production-code  pytest-coverage
.streamlit/: config.toml
app_pages/: __init__.py  comprehensive_evaluation.py  rank_to_score.py  score_to_university.py  university_detail.py  university_list.py
components/: __init__.py  charts.py  selectors.py
core/: __init__.py  config.py  data_loader.py  rank_calculator.py  university_filter.py
data/辽宁/2025/: admission_1.json  rank_table_l.tsv  rank_table_w.tsv
models/: __init__.py  enums.py  schemas.py
tests/: __init__.py  conftest.py  test_rank_to_score.py  test_score_to_university.py  test_university_detail.py  test_university_list.py
